# fixture-scraper

./: .gitignore  .gitmodules  app.py  db_push.py  import.json  prompt.txt  pyproject.toml
tests/: valid.py
